# Face_detection_and_emotion_recognition

./: .gitignore  CMakeLists.txt  README.md  recognition_output.txt
data/dataset_detection/labels/: angry_5.txt  angry_6.txt  disgust_5.txt  fear_2.txt  happy_6.txt  sad_1.txt  sad_2.txt  sad_4.txt
dataset_detection/labels/: angry (4).txt  angry_1.txt  angry_2.txt  angry_3.txt  disgust (1).txt  disgust (3).txt  disgust_2.txt  disgust_4.txt  disgust_6.txt  fear (1).txt  fear (3).txt  fear (4).txt  fear_5.txt  fear_6.txt  happy (3).txt  happy (7).txt  happy_1.txt  happy_2.txt  happy_4.txt  happy_5.txt  neutral (3).txt  neutral (4).txt  neutral (6).txt  neutral (7).txt  neutral_1.txt  neutral_2.txt  neutral_5.txt  sad (6).txt  sad (7).txt  sad_3.txt  sad_5.txt  surprise (2).txt  surprise (5).txt  surprise (6).txt  surprise(7).txt  surprise_1.txt  surprise_3.txt  surprise_4.txt
include/: face_detector.h  performance_metrics.h  utils.h
lib/: face_detector.cpp  performance_metrics.cpp  utils.cpp
log/: emotion_classifier_log.txt
output/: metrics.txt
python/: emotion_classifier.py  trainer.py
python/.ipynb_checkpoints/: face-emotion-detecting-vgg16-transfer-learning-checkpoint.ipynb
src/: VJ_image_detection.cpp  cpp_to_py.fifo  main.cpp  sender.py  utils.cpp
src/cpp/: main.cpp
src/python/: emotion_classifier.py  tester.py  trainer.py
